--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "complex-app",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "test.js",
   "scripts": {
     "watch": "start nodemon db --ignore frontend-js --ignore public/ && start webpack --watch",
     "start": "node db.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test --watch"
   },
   "keywords": [],
   "author": "",
